add js function to show image with .click event listener in scripts.js

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="container">
       <h1>Peek-a-boo</h1>
 
-      <p>Let's play peek-a-boo. Click here to see the surprise!</p>
+      <p>Let's play peek-a-boo. Click <em>here</em> to see the surprise!</p>
 
       <img src="img/walrus-surprise.jpg" alt="walrus with balloon illustration" />
     </div>
