--- a/index.html
+++ b/index.html
@@ -11,9 +11,13 @@
     <div class="container">
       <h1>Peek-a-boo</h1>
 
-      <p>Let's play peek-a-boo. Click <em>here</em> to see the surprise!</p>
-
-      <img src="img/walrus-surprise.jpg" alt="walrus with balloon illustration" />
+      <div class="walrus-hidden">
+        <p>Let's play peek-a-boo. Click <em>here</em> to see the surprise!</p>
+      </div>
+      <div class="walrus-showing">
+        <p>What a cute walrus! Click <em>here</em> to hide her again.</p>
+        <img src="img/walrus-surprise.jpg" alt="walrus with balloon illustration"/>
+      </div>
     </div>
   </body>
 </html>
