--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
       <h1>Peek-a-boo</h1>
 
       <div class="walrus-hidden">
-        <p>Let's play peek-a-boo. Click <em>here</em> to see the surprise!</p>
+        <p>Let's play peek-a-boo. Click here to see the surprise!</p>
       </div>
       <div class="walrus-showing">
-        <p>What a cute walrus! Click <em>here</em> to hide her again.</p>
+        <p>What a cute walrus! Click here to hide her again.</p>
         <img src="img/walrus-surprise.jpg" alt="walrus with balloon illustration"/>
       </div>
     </div>
