--- a/index.html
+++ b/index.html
@@ -13,12 +13,22 @@
         <p><strong>Peek-a-boo</strong> is an ancient game riddled in mystery and deceit. Though it appears to be an innocent childrens' pastime, you may change your mind when you learn of its treacherous history.</p>
 
       <div id="walrus-hidden">
-        <p>Let's play peek-a-boo. <span class="clickable">Click here</span> to see the surprise!</p>
+        <p>Let's play peek-a-boo. <span class="clickableW">Click here</span> to see the surprise!</p>
       </div>
       <div id="walrus-showing">
-        <p>What a cute walrus! <span class="clickable">Click here</span> to hide her again.</p>
-        <img src="img/walrus-surprise.jpg" alt="walrus with balloon illustration"/>
+        <p>What a cute walrus! <span class="clickableW">Click here</span> to hide her again.</p>
+        <img src="img/walrus-surprise.jpg" alt="walrus with balloon illustration">
       </div>
+
+      <p>This is another test but with a giraffe.</p>
+
+      <div id="giraffe-hidden">
+        <p>Let's play hide and go seek. <span class="clickableG">Click here.</span></p>
+      </div>
+      <div id="giraffe-showing">
+        <p>What a hideous giraffe! <span class="clickableG">Click here</span> to make it go away!</p>
+        <img src="img/giraffe.jpg" alt="picture of ugly giraffe">
+      </div
     </div>
   </body>
 </html>
